--- a/src/app/components/office/office.component.tns.html
+++ b/src/app/components/office/office.component.tns.html
@@ -9,9 +9,13 @@
         <TextField hint="Description" [(ngModel)]='model.description'  autocorrect="false" autocapitalizationType="none"></TextField>
     </StackLayout>
     <StackLayout class="input-field">
-        <ListPicker hint="Parent" [items]="listParent" textField="description" [(ngModel)]='model.parentUnitId'></ListPicker>
+        <ListPicker hint="Parent" [items]="listParent" textField="description" valueField="id" [(ngModel)]='model.parentUnitId'></ListPicker>
     </StackLayout>
     <StackLayout class="input-field">
-        <TextField hint="Note" height="100px" [(ngModel)]='model.note' autocorrect="false" autocapitalizationType="none"></TextField>
+        <TextView  hint="Note" [(ngModel)]='model.note' autocorrect="false" autocapitalizationType="none" maxLength="100">
+        </TextView>
+    </StackLayout>
+    <StackLayout>
+        <Button [text]="'Save'" class="-primary -rounded-sm" (tap)="saveOffice()"></Button>
     </StackLayout>
 </StackLayout>
